CParser.py
# Generated from C.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'__extension__'", "'auto'", "'break'", 
                     "'case'", "'char'", "'const'", "'continue'", "'default'", 
                     "'do'", "'double'", "'else'", "'enum'", "'extern'", 
                     "'float'", "'for'", "'goto'", "'if'", "'inline'", "'int'", 
                     "'long'", "'register'", "'restrict'", "'return'", "'short'", 
                     "'signed'", "'sizeof'", "'static'", "'struct'", "'switch'", 
                     "'typedef'", "'union'", "'unsigned'", "'void'", "'volatile'", 
                     "'while'", "'_Alignas'", "'_Alignof'", "'_Atomic'", 
                     "'_Bool'", "'_Complex'", "'_Generic'", "'_Imaginary'", 
                     "'_Noreturn'", "'_Static_assert'", "'_Thread_local'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", 
                     "'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", 
                     "'--'", "'*'", "'/'", "'%'", "'&'", "'|'", "'&&'", 
                     "'||'", "'^'", "'!'", "'~'", "'?'", "':'", "';'", "','", 
                     "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
                     "'>>='", "'&='", "'^='", "'|='", "'=='", "'!='", "'->'", 
                     "'.'", "'...'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "Auto", "Break", "Case", 
                      "Char", "Const", "Continue", "Default", "Do", "Double", 
                      "Else", "Enum", "Extern", "Float", "For", "Goto", 
                      "If", "Inline", "Int", "Long", "Register", "Restrict", 
                      "Return", "Short", "Signed", "Sizeof", "Static", "Struct", 
                      "Switch", "Typedef", "Union", "Unsigned", "Void", 
                      "Volatile", "While", "Alignas", "Alignof", "Atomic", 
                      "Bool", "Complex", "Generic", "Imaginary", "Noreturn", 
                      "StaticAssert", "ThreadLocal", "LeftParen", "RightParen", 
                      "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", 
                      "Less", "LessEqual", "Greater", "GreaterEqual", "LeftShift", 
                      "RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", 
                      "Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", 
                      "Caret", "Not", "Tilde", "Question", "Colon", "Semi", 
                      "Comma", "Assign", "StarAssign", "DivAssign", "ModAssign", 
                      "PlusAssign", "MinusAssign", "LeftShiftAssign", "RightShiftAssign", 
                      "AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", 
                      "Arrow", "Dot", "Ellipsis", "Identifier", "Constant", 
                      "DigitSequence", "StringLiteral", "ComplexDefine", 
                      "IncludeDirective", "AsmBlock", "LineAfterPreprocessing", 
                      "LineDirective", "PragmaDirective", "Whitespace", 
                      "Newline", "BlockComment", "LineComment" ]

    RULE_primaryExpression = 0
    RULE_postfixExpression = 1
    RULE_argumentExpressionList = 2
    RULE_unaryExpression = 3
    RULE_unaryOperator = 4
    RULE_castExpression = 5
    RULE_multiplicativeExpression = 6
    RULE_additiveExpression = 7
    RULE_shiftExpression = 8
    RULE_relationalExpression = 9
    RULE_equalityExpression = 10
    RULE_andExpression = 11
    RULE_exclusiveOrExpression = 12
    RULE_inclusiveOrExpression = 13
    RULE_logicalAndExpression = 14
    RULE_logicalOrExpression = 15
    RULE_conditionalExpression = 16
    RULE_assignmentExpression = 17
    RULE_assignmentOperator = 18
    RULE_expression = 19
    RULE_constantExpression = 20
    RULE_declarator = 21
    RULE_declaration = 22
    RULE_initDeclaratorList = 23
    RULE_initDeclarator = 24
    RULE_typeSpecifier = 25
    RULE_typeName = 26
    RULE_enumSpecifier = 27
    RULE_enumeratorList = 28
    RULE_enumerator = 29
    RULE_enumerationConstant = 30
    RULE_pointer = 31
    RULE_parameterTypeList = 32
    RULE_parameterList = 33
    RULE_parameterDeclaration = 34
    RULE_initializer = 35
    RULE_initializerList = 36
    RULE_statement = 37
    RULE_labeledStatement = 38
    RULE_compoundStatement = 39
    RULE_blockItem = 40
    RULE_selectionStatement = 41
    RULE_iterationStatement = 42
    RULE_forDeclaration = 43
    RULE_forExpression = 44
    RULE_compilationUnit = 45
    RULE_functionDefinition = 46

    ruleNames =  [ "primaryExpression", "postfixExpression", "argumentExpressionList", 
                   "unaryExpression", "unaryOperator", "castExpression", 
                   "multiplicativeExpression", "additiveExpression", "shiftExpression", 
                   "relationalExpression", "equalityExpression", "andExpression", 
                   "exclusiveOrExpression", "inclusiveOrExpression", "logicalAndExpression", 
                   "logicalOrExpression", "conditionalExpression", "assignmentExpression", 
                   "assignmentOperator", "expression", "constantExpression", 
                   "declarator", "declaration", "initDeclaratorList", "initDeclarator", 
                   "typeSpecifier", "typeName", "enumSpecifier", "enumeratorList", 
                   "enumerator", "enumerationConstant", "pointer", "parameterTypeList", 
                   "parameterList", "parameterDeclaration", "initializer", 
                   "initializerList", "statement", "labeledStatement", "compoundStatement", 
                   "blockItem", "selectionStatement", "iterationStatement", 
                   "forDeclaration", "forExpression", "compilationUnit", 
                   "functionDefinition" ]

    EOF = Token.EOF
    T__0=1
    Auto=2
    Break=3
    Case=4
    Char=5
    Const=6
    Continue=7
    Default=8
    Do=9
    Double=10
    Else=11
    Enum=12
    Extern=13
    Float=14
    For=15
    Goto=16
    If=17
    Inline=18
    Int=19
    Long=20
    Register=21
    Restrict=22
    Return=23
    Short=24
    Signed=25
    Sizeof=26
    Static=27
    Struct=28
    Switch=29
    Typedef=30
    Union=31
    Unsigned=32
    Void=33
    Volatile=34
    While=35
    Alignas=36
    Alignof=37
    Atomic=38
    Bool=39
    Complex=40
    Generic=41
    Imaginary=42
    Noreturn=43
    StaticAssert=44
    ThreadLocal=45
    LeftParen=46
    RightParen=47
    LeftBracket=48
    RightBracket=49
    LeftBrace=50
    RightBrace=51
    Less=52
    LessEqual=53
    Greater=54
    GreaterEqual=55
    LeftShift=56
    RightShift=57
    Plus=58
    PlusPlus=59
    Minus=60
    MinusMinus=61
    Star=62
    Div=63
    Mod=64
    And=65
    Or=66
    AndAnd=67
    OrOr=68
    Caret=69
    Not=70
    Tilde=71
    Question=72
    Colon=73
    Semi=74
    Comma=75
    Assign=76
    StarAssign=77
    DivAssign=78
    ModAssign=79
    PlusAssign=80
    MinusAssign=81
    LeftShiftAssign=82
    RightShiftAssign=83
    AndAssign=84
    XorAssign=85
    OrAssign=86
    Equal=87
    NotEqual=88
    Arrow=89
    Dot=90
    Ellipsis=91
    Identifier=92
    Constant=93
    DigitSequence=94
    StringLiteral=95
    ComplexDefine=96
    IncludeDirective=97
    AsmBlock=98
    LineAfterPreprocessing=99
    LineDirective=100
    PragmaDirective=101
    Whitespace=102
    Newline=103
    BlockComment=104
    LineComment=105

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PrimaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CParser.Identifier, 0)

        def Constant(self):
            return self.getToken(CParser.Constant, 0)

        def StringLiteral(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.StringLiteral)
            else:
                return self.getToken(CParser.StringLiteral, i)

        def LeftParen(self):
            return self.getToken(CParser.LeftParen, 0)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def RightParen(self):
            return self.getToken(CParser.RightParen, 0)

        def getRuleIndex(self):
            return CParser.RULE_primaryExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpression" ):
                return visitor.visitPrimaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpression(self):

        localctx = CParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_primaryExpression)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(CParser.Identifier)
                pass
            elif token in [CParser.Constant]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(CParser.Constant)
                pass
            elif token in [CParser.StringLiteral]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 96
                        self.match(CParser.StringLiteral)

                    else:
                        raise NoViableAltException(self)
                    self.state = 99 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                pass
            elif token in [CParser.LeftParen]:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.match(CParser.LeftParen)
                self.state = 102
                self.expression(0)
                self.state = 103
                self.match(CParser.RightParen)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostfixExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(CParser.PrimaryExpressionContext,0)


        def LeftParen(self):
            return self.getToken(CParser.LeftParen, 0)

        def typeName(self):
            return self.getTypedRuleContext(CParser.TypeNameContext,0)


        def RightParen(self):
            return self.getToken(CParser.RightParen, 0)

        def LeftBrace(self):
            return self.getToken(CParser.LeftBrace, 0)

        def initializerList(self):
            return self.getTypedRuleContext(CParser.InitializerListContext,0)


        def RightBrace(self):
            return self.getToken(CParser.RightBrace, 0)

        def Comma(self):
            return self.getToken(CParser.Comma, 0)

        def postfixExpression(self):
            return self.getTypedRuleContext(CParser.PostfixExpressionContext,0)


        def LeftBracket(self):
            return self.getToken(CParser.LeftBracket, 0)

        def expression(self):
            return self.getTypedRuleContext(CParser.ExpressionContext,0)


        def RightBracket(self):
            return self.getToken(CParser.RightBracket, 0)

        def argumentExpressionList(self):
            return self.getTypedRuleContext(CParser.ArgumentExpressionListContext,0)


        def PlusPlus(self):
            return self.getToken(CParser.PlusPlus, 0)

        def MinusMinus(self):
            return self.getToken(CParser.MinusMinus, 0)

        def getRuleIndex(self):
            return CParser.RULE_postfixExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixExpression" ):
                return visitor.visitPostfixExpression(self)
            else:
                return visitor.visitChildren(self)



    def postfixExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CParser.PostfixExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_postfixExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 108
                self.primaryExpression()
                pass

            elif la_ == 2:
                self.state = 109
                self.match(CParser.LeftParen)
                self.state = 110
                self.typeName()
                self.state = 111
                self.match(CParser.RightParen)
                self.state = 112
                self.match(CParser.LeftBrace)
                self.state = 113
                self.initializerList()
                self.state = 114
                self.match(CParser.RightBrace)
                pass

            elif la_ == 3:
                self.state = 116
                self.match(CParser.LeftParen)
                self.state = 117
                self.typeName()
                self.state = 118
                self.match(CParser.RightParen)
                self.state = 119
                self.match(CParser.LeftBrace)
                self.state = 120
                self.initializerList()
                self.state = 121
                self.match(CParser.Comma)
                self.state = 122
                self.match(CParser.RightBrace)
                pass

            elif la_ == 4:
                self.state = 124
                self.match(CParser.T__0)
                self.state = 125
                self.match(CParser.LeftParen)
                self.state = 126
                self.typeName()
                self.state = 127
                self.match(CParser.RightParen)
                self.state = 128
                self.match(CParser.LeftBrace)
                self.state = 129
                self.initializerList()
                self.state = 130
                self.match(CParser.RightBrace)
                pass

            elif la_ == 5:
                self.state = 132
                self.match(CParser.T__0)
                self.state = 133
                self.match(CParser.LeftParen)
                self.state = 134
                self.typeName()
                self.state = 135
                self.match(CParser.RightParen)
                self.state = 136
                self.match(CParser.LeftBrace)
                self.state = 137
                self.initializerList()
                self.state = 138
                self.match(CParser.Comma)
                self.state = 139
                self.match(CParser.RightBrace)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 158
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = CParser.PostfixExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 143
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 144
                        self.match(CParser.LeftBracket)
                        self.state = 145
                        self.expression(0)
                        self.state = 146
                        self.match(CParser.RightBracket)
                        pass

                    elif la_ == 2:
                        localctx = CParser.PostfixExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 148
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 149
                        self.match(CParser.LeftParen)
                        self.state = 151
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.T__0) | (1 << CParser.LeftParen) | (1 << CParser.Plus) | (1 << CParser.PlusPlus) | (1 << CParser.Minus) | (1 << CParser.MinusMinus) | (1 << CParser.Star))) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & ((1 << (CParser.And - 65)) | (1 << (CParser.Not - 65)) | (1 << (CParser.Tilde - 65)) | (1 << (CParser.Identifier - 65)) | (1 << (CParser.Constant - 65)) | (1 << (CParser.StringLiteral - 65)))) != 0):
                            self.state = 150
                            self.argumentExpressionList(0)


                        self.state = 153
                        self.match(CParser.RightParen)
                        pass

                    elif la_ == 3:
                        localctx = CParser.PostfixExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 154
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 155
                        self.match(CParser.PlusPlus)
                        pass

                    elif la_ == 4:
                        localctx = CParser.PostfixExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                        self.state = 156
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 157
                        self.match(CParser.MinusMinus)
                        pass

             
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ArgumentExpressionListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentExpression(self):
            return self.getTypedRuleContext(CParser.AssignmentExpressionContext,0)


        def argumentExpressionList(self):
            return self.getTypedRuleContext(CParser.ArgumentExpressionListContext,0)


        def Comma(self):
            return self.getToken(CParser.Comma, 0)

        def getRuleIndex(self):
            return CParser.RULE_argumentExpressionList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentExpressionList" ):
                return visitor.visitArgumentExpressionList(self)
            else:
                return visitor.visitChildren(self)


